Dodanie układania żółtych narożników + 2 specjalne sytuacje końcowe.

--- a/RubicsCube.csproj
+++ b/RubicsCube.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Scripts\MovingWalls.cs" />
     <Compile Include="Scripts\SecondLayerEdges.cs" />
     <Compile Include="Scripts\WhiteCorners.cs" />
+    <Compile Include="Scripts\YellowCorners.cs" />
     <Compile Include="Scripts\YellowCross.cs" />
   </ItemGroup>
   <ItemGroup>
